# Lesson-10

./: .gitignore
DynamicLib/: DynamicLib.sln
DynamicLib/DynamicLib/: DynamicLib.vcxproj  DynamicLib.vcxproj.filters  leaver.cpp  leaver.h
DynamicLib/DynamicLibApp/: DynamicLibApp.cpp  DynamicLibApp.vcxproj  DynamicLibApp.vcxproj.filters
DynamicLibCMake/: CMakeLists.txt
DynamicLibCMake/DynamicLibCMake/: leaver.cpp  leaver.h
DynamicLibCMake/DynamicLibCMakeApp/: DynamicLibCMakeApp.cpp
StaticLib/: MyStaticLib.sln
StaticLib/MyConsoleApp/: MyConsoleApp.vcxproj  main.cpp
StaticLib/MyStaticLib/: Greeter.cpp  Greeter.h  MyStaticLib.vcxproj
